--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ pylint-django==2.4.1    # linter help
 Faker==4.0.3            # to install fake data
 gunicorn==20.0.4
 flask-mongoengine
+dataframe_image
+pandas
+json
